# governance.pub

./: .gitignore  .renderignore  DEPLOYMENT.md  GOVERNANCE_TRANSACTIONS_IMPLEMENTATION_PLAN.md  README.md  RENDER_SETUP_INSTRUCTIONS.md  UI_UX_VISION.md  next.config.js  package-lock copy.json  package-lock.json  package.json  render.yaml
app/: layout.tsx  page.tsx
backend/: .dockerignore  .env.example  API.md  Cargo.toml  Dockerfile  README.md  RENDER_SETUP.md  railway.json  render.yaml  vercel-setup.md
backend/indexer/: Dockerfile  README.md  application.properties  docker-entrypoint.sh  render.yaml
backend/src/: config.rs  main.rs
backend/src/api/: actions.rs  dreps.rs  health.rs  mod.rs  stake.rs
backend/src/cache/: keys.rs  mod.rs
backend/src/db/: mod.rs  queries.rs
backend/src/models/: action.rs  common.rs  drep.rs  mod.rs  stake.rs
backend/src/providers/: blockfrost.rs  cached_router.rs  govtools.rs  koios.rs  mod.rs  provider.rs  router.rs  router_trait.rs  yaci_store.rs  yaci_store_router.rs
backend/src/services/: metadata_validation.rs  mod.rs
backend/src/utils/: bech32.rs  drep_id.rs  mod.rs  proposal_id.rs
components/: ActionDetail.tsx  ActionTimeline.tsx  DRepCard.tsx  DRepDetail.tsx  DRepList.tsx  DRepsSummaryStats.tsx  DelegateForm.tsx  GovernanceHeatmap.tsx  RegisterDRepForm.tsx  TransactionModal.tsx  VotingPowerFlow.tsx  WalletConnect.tsx
docs/: DEPLOYMENT.md  LOCAL_DEVELOPMENT_SETUP.md  MEMORY_OPTIMIZATION.md  MIGRATION_STATUS.md  RENDER_DEPLOYMENT.md  RENDER_SETUP_INSTRUCTIONS.md  governance-metadata-validation.md
lib/: koios.ts  (+2 more)
(+141 files in other folders)
